--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="images/favicon.png" type="image/png" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="script" href="script.js" />
     <title>Quran Quiz</title>
   </head>
   <body>
     <h1>Welcome to the Quran Quiz</h1>
-    <p>Test your knowledge about the Quran with our interactive quiz!</p>
+    <p class="css-working;">
+      Test your knowledge about the Quran with our interactive quiz!
+    </p>
+
+    <form action="quiz.html" method="post">
+      <button type="submit">Start Quiz</button>
+    </form>
   </body>
 </html>
