--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="images/favicon.png" type="image/png" />
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="script" href="script.js" />
+    <link rel="stylesheet" href="main.css" />
     <title>Quran Quiz</title>
   </head>
   <body>
     <h1>Welcome to the Quran Quiz</h1>
-    <p class="css-working;">
-      Test your knowledge about the Quran with our interactive quiz!
-    </p>
+    <p>Test your knowledge about the Quran with our interactive quiz!</p>
 
     <form action="quiz.html" method="post">
       <button type="submit">Start Quiz</button>
     </form>
+
+    <p class="css-working">css-working</p>
+    <script src="script.js"></script>
   </body>
 </html>
