--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             list="surah-names"
             autocomplete="off"
             required
+            autofocus
           />
         </label>
 
