--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             name="start-surah"
             list="surah-names"
             autocomplete="off"
+            data-number="1"
             required
             autofocus
           />
@@ -49,6 +50,7 @@
             name="end-surah"
             list="surah-names"
             autocomplete="off"
+            data-number="1"
             required
           />
         </label>
