--- a/index.html
+++ b/index.html
@@ -78,6 +78,6 @@
     </form>
 
     <div id="quiz-output" class="quran"></div>
-    <script type="module" src="./dist/script.js"></script>
+    <script type="module" src="dist/script.js"></script>
   </body>
 </html>
