--- a/index.html
+++ b/index.html
@@ -9,75 +9,85 @@
   </head>
   <body>
     <h1>Welcome to the Quran Quiz</h1>
-    <p>Test your knowledge about the Quran with our interactive quiz!</p>
 
-    <form id="selection-form" autocomplete="off">
-      <datalist id="surah-names"></datalist>
-      <div class="inputs-grid">
-        <label>
-          Starting Surah:
-          <input
-            type="text"
-            id="start-surah"
-            name="start-surah"
-            list="surah-names"
-            autocomplete="off"
-            data-number="1"
-            required
-            autofocus
-          />
-          <span id="start-surah-error" class="error-message"></span>
-        </label>
+    <div class="container">
+      <form id="selection-form" autocomplete="off">
+        <datalist id="surah-names"></datalist>
+        <div class="inputs-grid">
+          <label>
+            Starting Surah:
+            <input
+              type="text"
+              id="start-surah"
+              name="start-surah"
+              list="surah-names"
+              autocomplete="off"
+              required
+              autofocus
+            />
+            <span id="start-surah-error" class="error-message"></span>
+          </label>
 
-        <label>
-          Starting Ayah:
-          <input
-            type="number"
-            id="start-ayah"
-            name="start-ayah"
-            min="1"
-            max="3"
-            autocomplete="off"
-            required
-            disabled
-          />
-          <span id="start-ayah-error" class="error-message"></span>
-        </label>
+          <label>
+            Starting Ayah:
+            <input
+              type="number"
+              id="start-ayah"
+              name="start-ayah"
+              min="1"
+              max="3"
+              autocomplete="off"
+              required
+              disabled
+            />
+            <span id="start-ayah-error" class="error-message"></span>
+          </label>
 
-        <label>
-          Ending Surah:
-          <input
-            type="text"
-            id="end-surah"
-            name="end-surah"
-            list="surah-names"
-            autocomplete="off"
-            data-number="1"
-            required
-          />
-          <span id="end-surah-error" class="error-message"></span>
-        </label>
+          <label>
+            Ending Surah:
+            <input
+              type="text"
+              id="end-surah"
+              name="end-surah"
+              list="surah-names"
+              autocomplete="off"
+              required
+            />
+            <span id="end-surah-error" class="error-message"></span>
+          </label>
 
-        <label>
-          Ending Ayah:
-          <input
-            type="number"
-            id="end-ayah"
-            name="end-ayah"
-            min="1"
-            max="3"
-            autocomplete="off"
-            required
-            disabled
-          />
-          <span id="end-ayah-error" class="error-message"></span>
-        </label>
+          <label>
+            Ending Ayah:
+            <input
+              type="number"
+              id="end-ayah"
+              name="end-ayah"
+              min="1"
+              max="3"
+              autocomplete="off"
+              required
+              disabled
+            />
+            <span id="end-ayah-error" class="error-message"></span>
+          </label>
+        </div>
+        <br />
+        <button type="submit">Start Quiz</button>
+        <span id="form-error" class="error-message"></span>
+      </form>
+
+      <div id="quiz">
+        <div id="quiz-controls">
+          <button id="show-more">+</button>
+          <button id="show-less">-</button>
+          <button id="next-quiz">Next Quiz</button>
+          <button id="copy-ayah">Copy Ayah</button>
+          <button id="reveal-surah-name">Reveal Surah Name</button>
+          <button id="reveal-ayah-number">Reveal Ayah Number</button>
+        </div>
+        <div id="quiz-output" class="quran"></div>
       </div>
-      <br />
-      <button type="submit">Start Quiz</button>
-    </form>
-
-    <div id="quiz-output" class="quran"></div>
+    </div>
     <script type="module" src="dist/script.js"></script>
   </body>
 </html>
