--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
           <button id="show-less">-</button>
           <button id="next-quiz">Next Quiz</button>
           <button id="copy-ayah">Copy Ayah</button>
-          <button id="reveal-surah-name">Reveal Surah Name</button>
-          <button id="reveal-ayah-number">Reveal Ayah Number</button>
+          <button id="reveal-surah">Reveal Surah Name</button>
+          <button id="reveal-ayah">Reveal Ayah Number</button>
         </div>
         <div id="quiz-output" class="quran"></div>
       </div>
