--- a/index.html
+++ b/index.html
@@ -73,17 +73,17 @@
         </div>
         <br />
         <button type="submit">Start Quiz</button>
-        <span id="form-error" class="error-message"></span>
+        <div id="form-error" class="error-message"></div>
       </form>
 
       <div id="quiz">
         <div id="quiz-controls">
-          <button id="show-more">+</button>
-          <button id="show-less">-</button>
-          <button id="next-quiz">Next Quiz</button>
-          <button id="copy-ayah">Copy Ayah</button>
-          <button id="reveal-surah">Reveal Surah Name</button>
-          <button id="reveal-ayah">Reveal Ayah Number</button>
+          <button disabled id="show-more">+</button>
+          <button disabled id="show-less">-</button>
+          <button disabled id="next-quiz">Next Quiz</button>
+          <button disabled id="copy-ayah">Copy Ayah</button>
+          <button disabled id="reveal-surah">Reveal Surah</button>
+          <button disabled id="reveal-ayah">Reveal Ayah</button>
         </div>
         <div id="quiz-output" class="quran"></div>
       </div>
