--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   </head>
   <body>
     <h1 data-i18n="mainHeading">Welcome to the Quran Quiz</h1>
-
+    <button data-note="buttons.translate" id="translate">
+      <img src="images/globe.png" />
+    </button>
     <div class="container">
       <form id="selection-form" autocomplete="off">
         <datalist id="surah-names"></datalist>
