--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <img src="images/globe.png" />
           </button>
           <div class="select-wrapper">
-            <select id="input-mode">
+            <select disabled id="input-mode">
               <option value="ayah" data-i18n="dynamic.inputModes.ayah">Ayah</option>
               <option value="surah" data-i18n="dynamic.inputModes.surah">Surah</option>
               <option value="juz" data-i18n="dynamic.inputModes.juz">Juz</option>
@@ -46,7 +46,7 @@
             </label>
 
             <label>
-              <span data-i18n="labels.startAyah"> Starting Ayah: </span>
+              <span data-i18n="labels.startAyah"> Start Ayah: </span>
               <input
                 type="number"
                 id="start-ayah"
@@ -73,7 +73,7 @@
             </label>
 
             <label>
-              <span data-i18n="labels.endAyah"> Ending Ayah: </span>
+              <span data-i18n="labels.endAyah"> End Ayah: </span>
               <input
                 type="number"
                 id="end-ayah"
@@ -97,7 +97,7 @@
           <button data-i18n="buttons.showMore" disabled id="show-more">+</button>
           <button data-i18n="buttons.showLess" disabled id="show-less">-</button>
           <button data-i18n="buttons.nextQuiz" disabled id="next-quiz">
-            Next Quiz
+            Next Question
           </button>
           <button data-i18n="buttons.copyAyah" disabled id="copy-ayah">
             Copy Ayah
