--- a/index.html
+++ b/index.html
@@ -31,61 +31,56 @@
         <form id="selection-form" autocomplete="off">
           <datalist id="surah-names"></datalist>
           <div class="inputs-grid">
-            <label>
-              <span data-i18n="labels.startSurah"> Starting Surah: </span>
-              <input
-                type="text"
-                id="start-surah"
-                name="start-surah"
-                list="surah-names"
-                autocomplete="off"
-                required
-                autofocus
-              />
-              <span id="start-surah-error" class="error-message"></span>
+            <label for="start-surah" data-i18n="labels.startSurah">
+              Starting Surah:
             </label>
+            <input
+              type="text"
+              id="start-surah"
+              name="start-surah"
+              list="surah-names"
+              autocomplete="off"
+              required
+              autofocus
+            />
+            <span id="start-surah-error" class="error-message"></span>
 
-            <label>
-              <span data-i18n="labels.startAyah"> Start Ayah: </span>
-              <input
-                type="number"
-                id="start-ayah"
-                name="start-ayah"
-                min="1"
-                max="3"
-                autocomplete="off"
-                required
-                disabled
-              />
-              <span id="start-ayah-error" class="error-message"></span>
-            </label>
-            <label>
-              <span data-i18n="labels.endSurah"> Ending Surah: </span>
-              <input
-                type="text"
-                id="end-surah"
-                name="end-surah"
-                list="surah-names"
-                autocomplete="off"
-                required
-              />
-              <span id="end-surah-error" class="error-message"></span>
-            </label>
+            <label for="start-ayah" data-i18n="labels.startAyah"> Start Ayah: </label>
+            <input
+              type="number"
+              id="start-ayah"
+              name="start-ayah"
+              min="1"
+              max="3"
+              autocomplete="off"
+              required
+              disabled
+            />
+            <span id="start-ayah-error" class="error-message"></span>
 
-            <label>
-              <span data-i18n="labels.endAyah"> End Ayah: </span>
-              <input
-                type="number"
-                id="end-ayah"
-                name="end-ayah"
-                min="1"
-                max="3"
-                autocomplete="off"
-                required
-                disabled
-              />
-              <span id="end-ayah-error" class="error-message"></span>
-            </label>
+            <label for="end-surah" data-i18n="labels.endSurah"> Ending Surah: </label>
+            <input
+              type="text"
+              id="end-surah"
+              name="end-surah"
+              list="surah-names"
+              autocomplete="off"
+              required
+            />
+            <span id="end-surah-error" class="error-message"></span>
+
+            <label for="end-ayah" data-i18n="labels.endAyah"> End Ayah: </label>
+            <input
+              type="number"
+              id="end-ayah"
+              name="end-ayah"
+              min="1"
+              max="3"
+              autocomplete="off"
+              required
+              disabled
+            />
+            <span id="end-ayah-error" class="error-message"></span>
           </div>
           <br />
           <button data-i18n="buttons.startQuiz" type="submit">Start Quiz</button>
