--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="images/favicon.png" type="image/png" />
-    <link rel="stylesheet" href="css/main.css" />
+    <!-- <link rel="stylesheet" href="css/main.css" /> -->
+    <link rel="stylesheet" href="css/test2.css" />
 
     <title>Quran Quiz</title>
   </head>
   <body>
-    <h1 data-i18n="mainHeading">Welcome to the Quran Quiz</h1>
     <div class="container">
       <div class="card">
         <div class="card-header">
@@ -31,59 +31,68 @@
         <form id="selection-form" autocomplete="off">
           <datalist id="surah-names"></datalist>
           <div class="inputs-grid">
-            <label for="start-surah" data-i18n="labels.startSurah">
-              Starting Surah:
-            </label>
-            <input
-              type="text"
-              id="start-surah"
-              name="start-surah"
-              list="surah-names"
-              autocomplete="off"
-              required
-              autofocus
-            />
-            <span id="start-surah-error" class="error-message"></span>
+            <div id="surah-inputs">
+              <label for="start-surah" data-i18n="labels.startSurah">
+                Starting Surah:
+              </label>
+              <input
+                type="text"
+                id="start-surah"
+                name="start-surah"
+                list="surah-names"
+                autocomplete="off"
+                required
+                autofocus
+              />
+              <span id="start-surah-error" class="error-message"></span>
 
-            <label for="start-ayah" data-i18n="labels.startAyah"> Start Ayah: </label>
-            <input
-              type="number"
-              id="start-ayah"
-              name="start-ayah"
-              min="1"
-              max="3"
-              autocomplete="off"
-              required
-              disabled
-            />
-            <span id="start-ayah-error" class="error-message"></span>
+              <label for="end-surah" data-i18n="labels.endSurah">
+                Ending Surah:
+              </label>
+              <input
+                type="text"
+                id="end-surah"
+                name="end-surah"
+                list="surah-names"
+                autocomplete="off"
+                required
+              />
+              <span id="end-surah-error" class="error-message"></span>
+            </div>
 
-            <label for="end-surah" data-i18n="labels.endSurah"> Ending Surah: </label>
-            <input
-              type="text"
-              id="end-surah"
-              name="end-surah"
-              list="surah-names"
-              autocomplete="off"
-              required
-            />
-            <span id="end-surah-error" class="error-message"></span>
+            <div id="ayah-inputs">
+              <label for="start-ayah" data-i18n="labels.startAyah">
+                Start Ayah:
+              </label>
+              <input
+                type="number"
+                id="start-ayah"
+                name="start-ayah"
+                min="1"
+                max="3"
+                autocomplete="off"
+                required
+                disabled
+              />
+              <span id="start-ayah-error" class="error-message"></span>
 
-            <label for="end-ayah" data-i18n="labels.endAyah"> End Ayah: </label>
-            <input
-              type="number"
-              id="end-ayah"
-              name="end-ayah"
-              min="1"
-              max="3"
-              autocomplete="off"
-              required
-              disabled
-            />
-            <span id="end-ayah-error" class="error-message"></span>
+              <label for="end-ayah" data-i18n="labels.endAyah"> End Ayah: </label>
+              <input
+                type="number"
+                id="end-ayah"
+                name="end-ayah"
+                min="1"
+                max="3"
+                autocomplete="off"
+                required
+                disabled
+              />
+              <span id="end-ayah-error" class="error-message"></span>
+            </div>
           </div>
           <br />
-          <button data-i18n="buttons.startQuiz" type="submit">Start Quiz</button>
+          <button data-i18n="buttons.startQuiz" type="submit" id="start-quiz">Start Quiz</button>
+          <button data-i18n="buttons.stopQuiz" type="button" id="stop-quiz" class="hidden">Stop Quiz</button>
           <div id="form-error" class="error-message"></div>
         </form>
       </div>
