implement skipping and copy toast

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <button data-i18n="buttons.nextQuiz" disabled id="next-quiz">
               Next Question
             </button>
-            <button data-i18n="buttons.skipQuiz" disabled id="skip-quiz">Skip</button>
+            <button disabled data-i18n="buttons.skipQuiz" id="skip-quiz">Skip</button>
           </div>
 
           <div class="control-group center-group">
@@ -126,9 +126,7 @@
           </div>
 
           <div class="control-group right-group">
-            <button data-i18n="buttons.revealSurah" disabled id="reveal-surah">
-              Hint
-            </button>
+            <button data-i18n="buttons.hint" disabled id="hint">Hint</button>
             <button disabled id="copy-ayah" class="icon-btn">
               <img src="images/copy.png" alt="Copy" />
             </button>
