--- a/index.html
+++ b/index.html
@@ -193,7 +193,6 @@
               <button disabled id="add-mistake" aria-label="Add Mistake">+</button>
               <span data-i18n="labels.mistakes">Mistakes:</span>
               <span id="mistake-count">0</span>
-              <!-- Initialized to 0 instead of 999 for cleaner look -->
               <button disabled id="subtract-mistake" aria-label="Subtract Mistake">
                 -
               </button>
@@ -255,6 +254,6 @@
     </template>
 
     <!-- Application Script -->
-    <script type="module" src="dist/script.js"></script>
+    <script type="module" src="dist/script.js" defer></script>
   </body>
 </html>
