--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
 
     <!-- Styles -->
     <link rel="stylesheet" href="css/main.css" />
-
     <title>Quran Quiz</title>
   </head>
   <body>
@@ -181,9 +180,7 @@
             >
               -
             </button>
-            <button data-i18n="buttons.nextQuiz" disabled id="next-quiz">
-              Next Question
-            </button>
+            <button data-i18n="buttons.nextQuiz" disabled id="next-quiz">Next</button>
             <button disabled data-i18n="buttons.skipQuiz" id="skip-quiz">Skip</button>
           </div>
 
@@ -201,7 +198,9 @@
 
           <!-- Right: Hint & Actions -->
           <div class="control-group right-group">
-            <button data-i18n="buttons.hint" disabled id="hint">Hint</button>
+            <button data-i18n="buttons.hint" disabled id="hint">
+              Hint (reveals surah and ayah)
+            </button>
             <button
               disabled
               id="copy-ayah"
